# qt-example

./: .gitignore  CMakeLists.txt  copy_deps  copy_deps.sh  main.cpp  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h
.github/workflows/: msys2.yml  test_build.yml
examples/MainWindow/: .gitignore  CMakeLists.txt  main.cc
